# Evolution

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md
.github/workflows/: ci.yml
crates/replay/: Cargo.toml
crates/replay/src/: main.rs
crates/replay/tests/: golden.rs
crates/sim-core/: Cargo.toml
crates/sim-core/src/: brain.rs  command.rs  develop.rs  environment.rs  event.rs  genome.rs  lib.rs  math.rs  organism.rs  params.rs  presets.rs  regnet.rs  rng.rs  snapshot.rs  world.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/adr/: 0001-modding-rule.md
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: main.js
