[workspace]
resolver = "2"
members = ["crates/sim-core", "crates/replay", "crates/wasm"]
# Local `cargo build`/`test` stay fast on the native crates; the wasm host is built with
# wasm-pack. CI still exercises everything via `--workspace`.
default-members = ["crates/sim-core", "crates/replay"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.96"
repository = "https://github.com/CEOVolo/Evolution"

[workspace.dependencies]
sim-core = { path = "crates/sim-core" }

# Release profile tuned for the deterministic sim core.
# NOTE: codegen-units = 1 + no fast-math keeps float behavior stable across builds;
# do NOT enable target-cpu=native or fast-math — they break cross-target determinism.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
