[package]
name = "evolution-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Browser (wasm-bindgen) host for sim-core."

[lib]
crate-type = ["cdylib"]

[dependencies]
sim-core = { workspace = true }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
